--- a/BasicNeuralNetworks/testingpytorch.ipynb
+++ b/BasicNeuralNetworks/testingpytorch.ipynb
@@ -46,7 +46,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "X = torch.Tensor([[0,0],[0,1],[1,0],[1,1]])\n",
-    "Y = torch.Tensor([0,1,1,0]).view(-1,1)\n"
+    "Y = torch.Tensor([0,1,1,0]).view(-1,1) #changes the tensor from [0,1,1,0] to [[0],[1],[1],[0]]\n"
    ]
   },
   {
