Added some notes.

--- a/DeepLearningNeuralNetworks/ReccurentNeuralNetworks.ipynb
+++ b/DeepLearningNeuralNetworks/ReccurentNeuralNetworks.ipynb
@@ -38,6 +38,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> import numpy as np\n",
+    "> import torch\n",
+    "\n",
+    "Basic imports it's very useful.\n",
+    "\n",
+    "> chars = set(''.join(text))\n",
+    "\n",
+    "the \"set function\" turns a string into a set (a list with non repeatable elements) it uses the string/character called upon as a separator for each element.\n",
+    "In this case we're turning all of the characters into a set so we use integer identification for each letter and vice versa. (char to int)\n",
+    "It's similar to basic arrays or any sort of unique identification number. it's very useful to achieve what we're trying to do, which is guess the final few characters given only part of a sentence. One alternative I can think of is to iterate through the entire array and add the seperator, but that would take too long, and would be far less readable.\n",
+    "\n",
+    "> int2char = dict(enumerate(chars))\n",
+    "\n",
+    "2 functions worth eplaining here\n",
+    "\n",
+    "### dict()\n",
+    "\n",
+    "Dict **is** a function that turns an iterable into a dictionary. In other words, **it's** a hash set that turns an iterable with a key value pair into a dictionary. **For example**, If we had an iterable that already has a kv pair called \"example\" all we would need to do is call `dict(example)` and we would be able to use the dictonary as a hash map. Another way we could use it, if we didn't have an iterable that was a key value pair, is to used something simlar to named paramaters `dict(x=1,y=2,z=3)` where *x, y and z* are all variables. **Each of them** have their best use case, but of course you should use dict as you would use a hash map. **It's very useful** to use this function like named parameters, although I prefer another method which would use a constructor like in C# (although I can easily get used to this)\n",
+    "\n",
+    "### enumerate()\n",
+    "\n",
+    "Enumerate **creates** an indexed list. There are iterables in python that, by default, are not enumerated, this function **attempts to** add indexes to each entry into an array. **For example** lets say that we have a set (which by default isn't enumerated) of words that we need to access individually or that need to be modified, we can call enumerate by using `enumerate(x)` to turn set x into an enumerated list. Now we can call `x[y]` in order to access element y from set x. **An Alternative** would be to, of course, iterate over the set, although I'll admit I am not sure if that would work. **I think** it's a workable solution, I can't really think of an alternative as I'm not familar with iteration with python.\n",
+    "\n",
+    "> char2int = {char: ind for ind, char in int2char.items()}\n",
+    "\n",
+    "## What?\n",
+    "### python for loops\n",
+    "\n",
+    "python for loops can be written like: `for x in y:` where \"x\" is the value inside of iterable y. **it's similar** to a C# foreach loop (`foreach(Type x in y)`) where x is the value and y is the iterable. **It can be used** to iterate through any list. The syntax **is no where near** as straight forward as other syntaxes in this language, although I guess other syntaxes may be more verbose. There is something similar for iterables with a key value pair(`for x,y in z`) where z is an iterable with a key value pair, x is the key and y is the value. For example, given iterable `z = {\"one\":1,\"two\":2,\"three\":3}` the first iteration of `for x,y in z: (line break) print(x,\":\",y)` would output one:1. **I think** that this code is very confusing and requires knowing how it works in order to be readable, it is brief, but i may just stick to other more clear methods of writing this, or just use comments.\n",
+    "\n",
+    "### {char: ind for ind, char in int2char.items()}\n",
+    "\n",
+    "This **mess** is a combination of an array literal `{1,2,3}` and the for loop mentioned before. **In this case** we are creating a dictionary that is the inverse of out int2char array. Although this code **is** shorthand for mapping to arrays of equal length together. It's **very useful** albeit very confusing. \n",
+    "\n",
+    "\n",
+    "# So what does this do\n",
+    "\n",
+    "On a broader scale, this part of the code consists of definitions that we will use in order to simplify the entire process and void writing redundant code\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -67,6 +112,21 @@
     "for i in range(len(text)):\n",
     "    input_seq[i] = [char2int[character] for character in input_seq[i]]\n",
     "    target_seq[i] = [char2int[character] for character in target_seq[i]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> text[i][:-1]\n",
+    "\n",
+    "### py array slicing\n",
+    "\n",
+    "**There are** several parts to array indexing in python the, start, end, and step. The syntax **is** `[start:end:step]`. **For example** if we wanted to take the string `x=\"ThisThis is a long sentence in someparts of the world.world.\"` and slice it to get `\"This is a long sentence in someparts of the world.\"` we could slice x into `x[5:-6]`. There's more, if we only want every other letter we can use `x[::2]` or to write it in reverse `x[::-1]`. It's **similar** to substrings in other languages and equally as confusing. **Thankfully** the syntax is shorter and you don't have to deal with the annoyance of typing `substr(5,x.length -1)` every time.\n",
+    "\n",
+    "# So what does this do?\n",
+    "\n",
+    "It's more utilities that help use achieve our goal of finishing the sentence, It gives us a target sentence and possible inputs. Similar to how you would teach a neural network basic classification.\n"
    ]
   },
   {
@@ -172,6 +232,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What does this do\n",
+    "\n",
+    "This sets up a recurrent neural network with one layer. Recurrent neural networks require hidden layers as well as the normal input layers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -189,6 +258,15 @@
     "# Define Loss, Optimizer\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=lr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> torch.nn.CrossEntropyLoss()\n",
+    "\n",
+    "Cross entropy loss **is** a loss function that measures the difference of probabilities to the desired output."
    ]
   },
   {
