Add some more notes to one of the examples

--- a/DeepLearningNeuralNetworks/handwrittenNumbers.ipynb
+++ b/DeepLearningNeuralNetworks/handwrittenNumbers.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +50,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> fig, axes = plt.subplots(nrows=rows,ncols=cols,figsize(1.5*cols,2rows))\n",
+    "\n",
+    "- This line creates a figure and set of subplots. Subplots are graphs within a graph or a group of graphs. The allow the display of multiple graphs.\n",
+    "- If the entire image is a plot, then the individual images are subplots within the image. At it's base level it can be described as a function of f(x,y) where x and y are the rows and columns respectively each with no yet defined displays. Like setting up a plot of land yet to be used.\n",
+    "- Given there were one or more displays necessary for showing a plot, this would be a good solution. For example, if I wanted to show two graphs relating to the success of a given idea, both of them can be placed in a subplot. shown in the example above.\n",
+    "- Compared to **subplot** (singular) this creates multiple subplots at once. \"subplot\" creates one subplot but only returns \"axes\" where subplots returns a fig and axes. I think using subplot is easier in certain cases as they do the same thing. Specifically, I feel that the display of multiple forms of data is better done with subplots, while one or a few is better done with subplot.\n",
+    "- Having two functions that do the same thing is a little confusing, but overall the simple idea of plotting one or more charts is very useful. Overall, pretty simple functionality.\n",
+    "\n",
+    ">for i, ax in enumerate(axes.flatten()):\n",
+    ">\n",
+    ">    image, label = mnist_training[i]          # returns PIL image with its labels\n",
+    ">\n",
+    ">    ax.set_title(f\"Label: {label}\")\n",
+    ">\n",
+    ">    ax.imshow(image.squeeze(0), cmap='gray')  # we get a 1x28x28 tensor -> remove first dimension\n",
+    "\n",
+    "- This sequence turns the axes array into a single dimensional array (flatten) takes the data from the mnist training array, sets the title using `set_title` and places an image using `ax.imshow`.\n",
+    "- This sequence, using all of the axes (the plural of axis) setup using the `subplots` function, Gives each subplot visuals for the data that we need.\n",
+    "- This sequence can be used to iterate over all of the axes specifically in the `subplots` function to create several images or data charts. For example, if we need to show different possible results of an experiment or something, we can flatten the axes, set each respective title and set up the chart.\n",
+    "- This is very simple, and direct, the main confusing part is \"flatten\" which I guess doesn't have a simpler definition."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -68,6 +94,33 @@
     "batch_size = 1000\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(mnist_training, batch_size=batch_size,shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "model = torch.nn.Sequential(\n",
+    "    torch.nn.Linear(28*28,256),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(256,10)\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "- This is shorthand for a general NN in pytorch.\n",
+    "- It creates a neural network sequence that has a linear layer with a Rectified Linear Unit activation function and another linear layer.\n",
+    "- Creating a NN in this form is very useful when all you need is a simple neural network and don't need to write a full class yet. One example would be how would you use this to create a neural network which requires 3 linear layers using a ReLU (256 -> 16 -> 8 -> 4)\n",
+    "```\n",
+    "model = torch.nn.Sequential(\n",
+    "    torch.nn.Linear(256,16)\n",
+    "    torch.nn.ReLU()\n",
+    "    torch.nn.Linear(16,8)\n",
+    "    torch.nn.ReLU()\n",
+    "    torch.nn.Linear(8,1)\n",
+    ")\n",
+    "```\n",
+    "- Of course you can use a class for this neural network, but this works for what we're trying to do now."
    ]
   },
   {
