--- a/d2l/DataManipulationNotes.ipynb
+++ b/d2l/DataManipulationNotes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,6 +139,85 @@
    "source": [
     "#tensor with custom values\n",
     "torch.tensor([[2, 1, 4, 3], [1, 2, 3, 4], [4, 3, 2, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0],\n",
+      "        [1],\n",
+      "        [2]]) tensor([[0, 1]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 1],\n",
+       "        [1, 2],\n",
+       "        [2, 3]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#broadcasting example\n",
+    "a = torch.arange(3).reshape((3, 1))\n",
+    "b = torch.arange(2).reshape((1, 2))\n",
+    "print(a, b)\n",
+    "a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#examples to avoid memory leaks\n",
+    "Z = torch.zeros_like(Y)\n",
+    "print('id(Z):', id(Z))\n",
+    "Z[:] = X + Y\n",
+    "print('id(Z):', id(Z))\n",
+    "#or\n",
+    "before = id(X)\n",
+    "X += Y\n",
+    "id(X) == before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[False,  True, False,  True],\n",
+      "        [False, False, False, False],\n",
+      "        [False, False, False, False]]) tensor([[False, False, False, False],\n",
+      "        [ True,  True,  True,  True],\n",
+      "        [ True,  True,  True,  True]]) tensor([[ True, False,  True, False],\n",
+      "        [False, False, False, False],\n",
+      "        [False, False, False, False]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#examples\n",
+    "X = torch.arange(12, dtype=torch.float32).reshape((3,4))\n",
+    "Y = torch.tensor([[2.0, 1, 4, 3], [1, 2, 3, 4], [4, 3, 2, 1]])\n",
+    "\n",
+    "print(X == Y, X > Y, X < Y)"
    ]
   }
  ],
